<resources>
    <string name="app_name">Learn GO</string>
    <string name="new_dack">Новая колода</string>
    <string name="create">Создать</string>
    <string name="name">Название</string>
    <string name="first_site">Первая сторона</string>
    <string name="second_site">Вторая сторона</string>
    <string name="add_card">Добавить карту</string>
    <string name="delete_last">Очистить ввод</string>
    <string name="undo">Очистить БД</string>
    <string name="show_all">Показать все</string>
    <string name="deck">Колоды</string>
    <string name="kollection">Коллекции</string>
    <string name="newW">Новая</string>
    <string name="ewry">все</string>
    <string name="kard">Карт:</string>
    <string name="karty">Карточки</string>
    <string name="learning">Заучивание</string>
    <string name="conect">Соединение</string>
    <string name="choose">Выбор</string>
    <string name="show_kard">Редактор</string>
    <string name="sovet">Введите и нажмите на Плюс для добавления, и на Ручку для изменения</string>
    <string name="change_side">Сменить сторону</string>
    <string name="know">Знаю</string>
    <string name="dont_know">Не знаю</string>
    <string name="no_study">Не изучено</string>
    <string name="in_process">В процессе</string>
    <string name="done">Изучено</string>
    <string name="alart_write_top">Введите значения в верхние поля ввода и нажмите снова.</string>
    <string name="alert_no_free_card">Не стоит добавлять пустые карты, введите значение.</string>
    <string name="alert_free_deck">Добавьте в вашу колоду карт.</string>
    <string name="dialog_memo_1">Вы хотите сменить сторону?</string>
    <string name="dialog_memo_2">Будет потерян ваш прогресс.</string>
    <string name="dialog_memo_3">Вы все прошли!</string>
    <string name="dialog_memo_4">Хоте попробовать сново?</string>
    <string name="daily_work">Ежедневная тренировка</string>
    <string name="good">Ты все повторил! Молодец!</string>
    <string name="no_word">Сегодня у тебя нет карточек для повторения!</string>
    <string name="today">Сегодня ты должен повторить: </string>
    <string name="make_collection">Создать коллекцию?</string>
    <string name="wraite_name">Введите название</string>
    <string name="close">Закрыть</string>
    <string name="put_deck">Добавить колоду в коллекцию</string>
    <string name="add">Добавить</string>
    <string name="add_coloda">Добавить колоду?</string>
    <string name="cant_find_this_deck">Данной колоды не существует!</string>
    <string name="emty_kollection">Нельзя создать пустую коллекцию</string>
    <string name="beee">Данный колода уже в коллекции</string>
    <string name="little_card">В вашей колоде слишком мало карт для данного режима!</string>
</resources>